--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@apollo/client": "^3.9.7",
     "@apollo/experimental-nextjs-app-support": "^0.8.0",
     "@hookform/resolvers": "^3.3.4",
-    "@nivo/bar": "^0.84.0",
-    "@nivo/calendar": "^0.84.0",
-    "@nivo/line": "^0.84.0",
-    "@nivo/pie": "^0.84.0",
+    "@nivo/bar": "0.85.1",
+    "@nivo/calendar": "0.85.1",
+    "@nivo/line": "0.85.1",
+    "@nivo/pie": "0.85.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -34,17 +34,17 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@tanstack/react-table": "^8.11.3",
-    "apexcharts": "^3.45.1",
+    "@tanstack/react-table": "^8.15.3",
+    "apexcharts": "^3.48.0",
     "apollo-link-context": "^1.0.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.1.0",
-    "lucide-react": "^0.306.0",
+    "lucide-react": "0.363.0",
     "next": "14.0.4",
     "next-auth": "^4.24.7",
-    "next-themes": "^0.2.1",
+    "next-themes": "0.3.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-day-picker": "^8.10.0",
@@ -57,9 +57,9 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
-    "@graphql-codegen/client-preset": "^4.2.4",
-    "@graphql-typed-document-node/core": "^3.2.0",
-    "@iconify-icon/react": "^1.0.8",
+    "@graphql-codegen/client-preset": "4.2.5",
+    "@graphql-typed-document-node/core": "3.2.0",
+    "@iconify-icon/react": "^2.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
