--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_GRAPHQL_URL = 'https://espejo.workflowdt.cloud/graphql'
-NEXT_API_URL = 'https://espejo.workflowdt.cloud'
+NEXT_PUBLIC_GRAPHQL_URL = 'https://espejo-nest.app.workflowdt.cloud/graphql'
+NEXT_API_URL = 'https://espejo-nest.app.workflowdt.cloud'
 NEXTAUTH_URL = 'http://localhost:4501'
 NEXTAUTH_SECRET=lsdkmlskdmflksdkskmsdnkj
